fix spacing in support us header

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -404,6 +404,9 @@ a
   padding: 0 0 24px 30px
   width: 74%
 
+  &.support-us
+    margin-top: 20px
+
   h4
     color: $title-side
     margin: 0
